# OpenCV

./: CMakeLists.txt  Image.h  RGB.h  image.h  kernel.h  main.cpp  rgb.h
